--- a/src/app/modules/blogs/edit-v2/bottom-bar/meta/meta.component.scss
+++ b/src/app/modules/blogs/edit-v2/bottom-bar/meta/meta.component.scss
@@ -17,6 +17,7 @@
       font-size: 11pt;
       padding-bottom: 4px;
       flex-wrap: wrap;
+      word-break: break-word;
 
       @include m-theme() {
         color: themed($m-textColor--secondary);
