--- a/src/app/modules/blogs/edit-v2/bottom-bar/tags/tags.component.scss
+++ b/src/app/modules/blogs/edit-v2/bottom-bar/tags/tags.component.scss
@@ -17,6 +17,8 @@
       padding: 4px 12px;
       margin: 4px;
       cursor: pointer;
+      max-width: 100%;
+      word-break: break-word;
 
       @include m-theme() {
         border: 1px solid themed($m-borderColor--primary);
