--- a/src/app/modules/blogs/edit-v2/ckeditor/editor.component.scss
+++ b/src/app/modules/blogs/edit-v2/ckeditor/editor.component.scss
@@ -6,6 +6,17 @@
   // max-height: 50vh;
   padding: 0 !important;
   border: unset !important;
+
+  table {
+    display: flex;
+    justify-content: center;
+  }
+
+  .ck-editor__nested-editable_focused {
+    @include m-theme() {
+      background: themed($m-bgColor--secondary) !important;
+    }
+  }
 }
 
 .ck-balloon-panel {
