--- a/src/app/modules/wire/v2/creator/form/form.component.html
+++ b/src/app/modules/wire/v2/creator/form/form.component.html
@@ -256,6 +256,7 @@
                 class="m-wireCreatorForm__topUpLink"
                 *ngIf="service.isUpgrade$ | async"
                 routerLink="/token"
+                target="_blank"
                 i18n="@@WIRE_CREATOR_FORM__TOP_UP_WALLET"
                 >Top-up wallet</a
               >
