--- a/src/app/modules/composer/components/popup/monetize/v2/components/monetize.component.scss
+++ b/src/app/modules/composer/components/popup/monetize/v2/components/monetize.component.scss
@@ -1,34 +1,32 @@
 m-composer__monetizeV2 {
   .m-tabs__container {
     padding: 0;
+    margin-bottom: 30px;
   }
   .m-composerPopup__title {
-    margin: 0 0 22px;
+    margin: 0 0 18px;
   }
   .m-composerPopup__text {
     margin: 0 0 20px;
   }
-
-  // label:not(.m-composerPopup__trigger),
-  // .m-composerPopup__label {
-  //   margin: 0 0 10px;
-  // }
-
-  // .m-composerPopup__field {
-  //   position: relative;
-  //   margin: 0 0 40px 0;
-
-  //   &.m-composerMonetize__typeField {
-  //     margin: 0 0 20px 0;
-  //   }
-
-  //   .m-form__field--radio,
-  //   .m-form__customInputWrapper__radio {
-  //     margin-bottom: 0 !important;
-  //   }
-  // }
-
-  // .m-form__field--select select {
-  //   width: 100%;
-  // }
+  a {
+    font-size: 16px;
+    text-decoration: underline;
+    cursor: pointer;
+  }
+  .m-composerPopup__action {
+    min-height: 585px;
+  }
+  .m-composerPopup__content.m-formWrapper {
+    padding-bottom: 60px;
+  }
+  .m-form__row--label {
+    span {
+      font-size: 15px;
+      font-weight: 400;
+      @include m-theme() {
+        color: themed($m-textColor--secondary);
+      }
+    }
+  }
 }
