(chore): use contain for images - #2282

--- a/src/app/modules/media/components/video-player/player.component.scss
+++ b/src/app/modules/media/components/video-player/player.component.scss
@@ -38,7 +38,7 @@ m-videoPlayer--scrollaware {
   height: 330px;
   background-position: center;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: contain;
   background-color: #222;
   position: relative;
   i {
