(feat): point to plus endpoints for discovery

--- a/src/app/common/components/paywall-badge/paywall-badge.component.html
+++ b/src/app/common/components/paywall-badge/paywall-badge.component.html
@@ -10,8 +10,12 @@
       }"
     >
       <i *ngIf="paywallType !== 'plus'" class="material-icons">lock</i>
-      <span *ngIf="paywallType === 'plus'">Minds+</span>
-      <span *ngIf="paywallType === 'tier'">{{ tierName }} Members Only</span>
+      <span class="m-paywallBadge__tierName" *ngIf="paywallType === 'plus'"
+        >MINDS+</span
+      >
+      <span class="m-paywallBadge__tierName" *ngIf="paywallType === 'tier'"
+        >{{ tierName }} Members Only</span
+      >
     </div>
   </ng-container>
 </ng-container>
