--- a/src/app/modules/discovery/discovery.component.scss
+++ b/src/app/modules/discovery/discovery.component.scss
@@ -48,6 +48,9 @@
   .m-discoveryTrendListItem__supportingText--below {
     margin-top: $minds-margin;
   }
+  m-paywallBadge {
+    margin-right: 10px;
+  }
   span {
     margin-right: 4px;
     font-weight: 400;
