--- a/src/app/modules/discovery/trends/list-item.component.html
+++ b/src/app/modules/discovery/trends/list-item.component.html
@@ -18,9 +18,9 @@
       </h4>
       <div class="m-discoveryTrendListItem__supportingText--below">
         <m-paywallBadge
-          [entity]="entity"
-          accentColor="false"
-          topRightPosition="false"
+          [entity]="trend.entity"
+          [accentColor]="false"
+          [topRightPosition]="false"
         ></m-paywallBadge>
         <span>{{ trend.volume }} channels discussing</span>
         <span>{{ trend.entity.time_created | friendlytime }}</span>
