(fix): do not allow unlock post button to overlap play button

--- a/src/app/modules/wire/lock-screen/wire-lock-screen.component.html
+++ b/src/app/modules/wire/lock-screen/wire-lock-screen.component.html
@@ -3,7 +3,8 @@
     class="m-wire__lockScreen"
     [ngClass]="{
       isTextOnly: contentType === 'status',
-      isMedia: contentType !== 'status'
+      isMedia: contentType !== 'status',
+      isVideo: contentType === 'video'
     }"
     (click)="$event.stopPropagation(); unlock()"
     *ngIf="entity.wire_threshold && init"
