--- a/src/app/modules/blogs/edit-v2/editor-base.component.scss
+++ b/src/app/modules/blogs/edit-v2/editor-base.component.scss
@@ -128,9 +128,11 @@
           color: themed($m-textColor--primary);
         }
         border: unset;
-        font-size: 32px;
         font-weight: 500;
         outline: none;
+        font-family: 'Roboto';
+        font-size: 42px;
+        font-weight: bold;
       }
     }
   }
