--- a/src/app/modules/blogs/edit-v2/ckeditor/editor.component.scss
+++ b/src/app/modules/blogs/edit-v2/ckeditor/editor.component.scss
@@ -25,8 +25,8 @@
 }
 
 .ck-button.ck-block-toolbar-button {
-  // show over nav.
-  z-index: 1000000 !important;
+  // show over nav and balloon panel.
+  z-index: 1000001 !important;
 
   // overrides ck-hidden for this element.
   // display: flex !important;
