--- a/src/app/modules/settings-v2/other/referrals/dashboard/dashboard.component.html
+++ b/src/app/modules/settings-v2/other/referrals/dashboard/dashboard.component.html
@@ -51,126 +51,128 @@
     </div>
 
     <ng-container *ngFor="let referral of referrals">
-      <div
-        class="m-settingsV2__referralsDashboard__row m-settingsV2__referralsDashboard__dataRow"
-      >
+      <ng-container *ngIf="referral.prospect">
         <div
-          class="m-settingsV2__referralsDashboard__cell m-settingsV2__referralsDashboard__userCol"
+          class="m-settingsV2__referralsDashboard__row m-settingsV2__referralsDashboard__dataRow"
         >
-          <a
-            [routerLink]="['/', referral.prospect.username]"
-            class="m-settingsV2__referralsDashboard__userAvatarWrapper"
+          <div
+            class="m-settingsV2__referralsDashboard__cell m-settingsV2__referralsDashboard__userCol"
           >
-            <img
-              class="m-settingsV2__referralsDashboard__userAvatar mdl-shadow--2dp"
-              [hovercard]="referral.prospect.guid"
-              src="/icon/{{ referral.prospect.guid }}/small/{{
-                referral.prospect.icontime
-              }}"
-            />
-          </a>
-          <a
-            [routerLink]="['/', referral.prospect.username]"
-            class="m-settingsV2__referralsDashboard__userNameWrapper"
-          >
-            <span class="m-settingsV2__referralsDashboard__userName">{{
-              referral.prospect.username
-            }}</span>
-            <m-channel--badges
-              class="m-channel--badges-activity"
-              [user]="referral.prospect"
-              badges="[ 'admin', 'verified' ]"
-            ></m-channel--badges>
-          </a>
-        </div>
-        <div
-          class="m-settingsV2__referralsDashboard__cell m-settingsV2__referralsDashboard__statusCol"
-        >
-          <span>{{ referral.state | titlecase }}</span>
-        </div>
-        <div
-          class="m-settingsV2__referralsDashboard__cell m-settingsV2__referralsDashboard__registerCol"
-        >
-          <span>{{ referral.register_timestamp | date }}</span>
-        </div>
-        <div
-          class="m-settingsV2__referralsDashboard__cell m-settingsV2__referralsDashboard__rewardsCol"
-        >
-          <span
-            *ngIf="referral.state === 'complete'; else ping"
-            class="m-settingsV2__referralsDashboard__rewardsDate"
-            >{{ referral.join_timestamp | date }}</span
-          >
-        </div>
-        <ng-template #ping>
-          <div class="m-settingsV2__referralsDashboard__pingButtonContainer">
-            <m-tooltip [anchor]="top">
-              <div
-                m-tooltip--anchor
-                class="m-settingsV2__referralsDashboard__pingTooltip"
-              >
-                <div>
-                  <button
-                    class="m-btn m-btn--slim m-btn--with-icon"
-                    [ngClass]="{
-                      'm-settingsV2__referralsDashboard__pingButton--disabled': !referral.pingable
-                    }"
-                    (click)="triggerNotification(referral)"
-                  >
-                    <i
-                      *ngIf="referral.pingable"
-                      class="m-settingsV2__referralsDashboard__pingIcon material-icons"
-                      [ngClass]="{
-                        'm-settingsV2__referralsDashboard__pingIcon--wiggle':
-                          referral.pingInProgress
-                      }"
-                      >notifications_active</i
-                    >
-                    <i
-                      *ngIf="!referral.pingable"
-                      class="m-settingsV2__referralsDashboard__pingIcon material-icons"
-                      >notifications</i
-                    >
-                    <span
-                      *ngIf="referral.pingable"
-                      i18n="@@M_REFERRALS_DASHBOARD__PING_BUTTON"
-                      >ping</span
-                    >
-                    <span
-                      *ngIf="!referral.pingable"
-                      i18n="@@M_REFERRALS_DASHBOARD__PING_STATE"
-                      >pinged</span
-                    >
-                  </button>
-                </div>
-              </div>
-              <ng-container
-                *ngIf="referral.pingable && !isMobileOrTablet()"
-                i18n="@@M_REFERRALS_DASHBOARD__PING_BUTTON_NOTICE__ENABLED"
-              >
-                Send {{ referral.prospect.username }} a notification to let them
-                know they ought to join the rewards program
-              </ng-container>
-              <!-- Go straight to success notice when on mobile or tablet -->
-              <ng-container
-                *ngIf="
-                  (!referral.pingable && referral.pingRecentlySent) ||
-                  (referral.pingable && isMobileOrTablet())
-                "
-                i18n="@@M_REFERRALS_DASHBOARD__PING_BUTTON_NOTICE__SENT"
-              >
-                Ping sent!
-              </ng-container>
-              <ng-container
-                *ngIf="!referral.pingable && !referral.pingRecentlySent"
-                i18n="@@M_REFERRALS_DASHBOARD__PING_BUTTON_NOTICE__DISABLED"
-              >
-                You can only ping once every 7 days
-              </ng-container>
-            </m-tooltip>
+            <a
+              [routerLink]="['/', referral.prospect.username]"
+              class="m-settingsV2__referralsDashboard__userAvatarWrapper"
+            >
+              <img
+                class="m-settingsV2__referralsDashboard__userAvatar mdl-shadow--2dp"
+                [hovercard]="referral.prospect.guid"
+                src="/icon/{{ referral.prospect.guid }}/small/{{
+                  referral.prospect.icontime
+                }}"
+              />
+            </a>
+            <a
+              [routerLink]="['/', referral.prospect.username]"
+              class="m-settingsV2__referralsDashboard__userNameWrapper"
+            >
+              <span class="m-settingsV2__referralsDashboard__userName">{{
+                referral.prospect.username
+              }}</span>
+              <m-channel--badges
+                class="m-channel--badges-activity"
+                [user]="referral.prospect"
+                badges="[ 'admin', 'verified' ]"
+              ></m-channel--badges>
+            </a>
           </div>
-        </ng-template>
-      </div>
+          <div
+            class="m-settingsV2__referralsDashboard__cell m-settingsV2__referralsDashboard__statusCol"
+          >
+            <span>{{ referral.state | titlecase }}</span>
+          </div>
+          <div
+            class="m-settingsV2__referralsDashboard__cell m-settingsV2__referralsDashboard__registerCol"
+          >
+            <span>{{ referral.register_timestamp | date }}</span>
+          </div>
+          <div
+            class="m-settingsV2__referralsDashboard__cell m-settingsV2__referralsDashboard__rewardsCol"
+          >
+            <span
+              *ngIf="referral.state === 'complete'; else ping"
+              class="m-settingsV2__referralsDashboard__rewardsDate"
+              >{{ referral.join_timestamp | date }}</span
+            >
+          </div>
+          <ng-template #ping>
+            <div class="m-settingsV2__referralsDashboard__pingButtonContainer">
+              <m-tooltip [anchor]="top">
+                <div
+                  m-tooltip--anchor
+                  class="m-settingsV2__referralsDashboard__pingTooltip"
+                >
+                  <div>
+                    <button
+                      class="m-btn m-btn--slim m-btn--with-icon"
+                      [ngClass]="{
+                        'm-settingsV2__referralsDashboard__pingButton--disabled': !referral.pingable
+                      }"
+                      (click)="triggerNotification(referral)"
+                    >
+                      <i
+                        *ngIf="referral.pingable"
+                        class="m-settingsV2__referralsDashboard__pingIcon material-icons"
+                        [ngClass]="{
+                          'm-settingsV2__referralsDashboard__pingIcon--wiggle':
+                            referral.pingInProgress
+                        }"
+                        >notifications_active</i
+                      >
+                      <i
+                        *ngIf="!referral.pingable"
+                        class="m-settingsV2__referralsDashboard__pingIcon material-icons"
+                        >notifications</i
+                      >
+                      <span
+                        *ngIf="referral.pingable"
+                        i18n="@@M_REFERRALS_DASHBOARD__PING_BUTTON"
+                        >ping</span
+                      >
+                      <span
+                        *ngIf="!referral.pingable"
+                        i18n="@@M_REFERRALS_DASHBOARD__PING_STATE"
+                        >pinged</span
+                      >
+                    </button>
+                  </div>
+                </div>
+                <ng-container
+                  *ngIf="referral.pingable && !isMobileOrTablet()"
+                  i18n="@@M_REFERRALS_DASHBOARD__PING_BUTTON_NOTICE__ENABLED"
+                >
+                  Send {{ referral.prospect.username }} a notification to let
+                  them know they ought to join the rewards program
+                </ng-container>
+                <!-- Go straight to success notice when on mobile or tablet -->
+                <ng-container
+                  *ngIf="
+                    (!referral.pingable && referral.pingRecentlySent) ||
+                    (referral.pingable && isMobileOrTablet())
+                  "
+                  i18n="@@M_REFERRALS_DASHBOARD__PING_BUTTON_NOTICE__SENT"
+                >
+                  Ping sent!
+                </ng-container>
+                <ng-container
+                  *ngIf="!referral.pingable && !referral.pingRecentlySent"
+                  i18n="@@M_REFERRALS_DASHBOARD__PING_BUTTON_NOTICE__DISABLED"
+                >
+                  You can only ping once every 7 days
+                </ng-container>
+              </m-tooltip>
+            </div>
+          </ng-template>
+        </div>
+      </ng-container>
     </ng-container>
 
     <div
