(fix): minds plus should be white in dark mode too

--- a/src/app/common/components/paywall-badge/paywall-badge.component.scss
+++ b/src/app/common/components/paywall-badge/paywall-badge.component.scss
@@ -37,7 +37,7 @@ m-paywallBadge {
     > .m-paywallBadge__tierName {
       font-weight: 500;
       @include m-theme() {
-        color: themed($m-white);
+        color: themed($m-white-always);
       }
       margin-right: 0;
     }
