--- a/src/app/common/components/forms/checkbox/checkbox.component.html
+++ b/src/app/common/components/forms/checkbox/checkbox.component.html
@@ -4,6 +4,7 @@
     [ngModel]="value"
     (ngModelChange)="updateValue($event)"
     [id]="id"
+    [disabled]="disabled"
   />
   <div class="m-formInputCheckbox__visibleWrapper">
     <span class="m-formInputCheckbox__custom"></span>
