--- a/src/app/modules/composer/components/popup/popup.component.scss
+++ b/src/app/modules/composer/components/popup/popup.component.scss
@@ -142,6 +142,12 @@ m-composer__popup {
     font-size: 16px;
     line-height: 21px;
   }
+  .m-composerPopup__error {
+    margin-right: 10px;
+    @include m-theme() {
+      color: themed($m-alert);
+    }
+  }
 
   .m-composerPopup__smallNote {
     font-size: 14px;
