--- a/src/app/modules/composer/components/popup/monetize/v2/components/memberships/memberships.component.scss
+++ b/src/app/modules/composer/components/popup/monetize/v2/components/memberships/memberships.component.scss
@@ -2,6 +2,7 @@ m-composer__monetizeV2__memberships {
   .m-form__row--label {
     display: flex;
     justify-content: space-between;
+    font-size: 15px;
     a {
       display: inline-block;
       margin-left: 10px;
@@ -18,6 +19,8 @@ m-composer__monetizeV2__memberships {
     font-size: 16px;
     display: flex;
     flex-flow: row wrap;
+    -webkit-font-smoothing: antialiased;
+    text-rendering: optimizeLegibility;
     @include m-theme() {
       color: themed($m-textColor--secondary);
     }
