--- a/src/app/modules/composer/components/popup/monetize/v2/components/monetize.component.html
+++ b/src/app/modules/composer/components/popup/monetize/v2/components/monetize.component.html
@@ -1,8 +1,7 @@
 <div class="m-composerPopup__body m-composer__monetize">
-  <div class="m-composerPopup__content m-formWrapper">
+  <div class="m-composerPopup__content">
     <h3 class="m-composerPopup__title" i18n="@@COMMON__MONETIZE">Monetize</h3>
-
-    <div class="m-tabs__container">
+    <div class="m-tabs__container" *ngIf="!isEditingPlus">
       <div class="m-tabs__tab">
         <a
           [ngClass]="{ 'm-tabs__tab--selected': state.type === 'plus' }"
@@ -25,29 +24,18 @@
         >
       </div>
     </div>
-
-    <m-composer__monetizeV2__plus
-      *ngIf="state.type === 'plus'"
-    ></m-composer__monetizeV2__plus>
-    <m-composer__monetizeV2__memberships
-      *ngIf="state.type === 'membership'"
-    ></m-composer__monetizeV2__memberships>
-    <m-composer__monetizeV2__custom
-      *ngIf="state.type === 'custom'"
-    ></m-composer__monetizeV2__custom>
-
-    <!-- </div>
-
-  <div class="m-composerPopup__action">
-    <m-button
-      class="m-composerPopup__save"
-      [disabled]="state.enabled && state.amount <= 0"
-      (onAction)="save()"
-      data-cy="monetize-save-button"
-      i18n="@@COMMON__SAVE"
-    >
-      Save
-    </m-button>
-  </div> -->
   </div>
+  <m-composer__monetizeV2__plus
+    (dismissIntent)="dismissIntent.emit()"
+    *ngIf="state.type === 'plus'"
+    [isEditingPlus]="isEditingPlus"
+  ></m-composer__monetizeV2__plus>
+  <m-composer__monetizeV2__memberships
+    (dismissIntent)="dismissIntent.emit()"
+    *ngIf="state.type === 'membership'"
+  ></m-composer__monetizeV2__memberships>
+  <m-composer__monetizeV2__custom
+    (dismissIntent)="dismissIntent.emit()"
+    *ngIf="state.type === 'custom'"
+  ></m-composer__monetizeV2__custom>
 </div>
