--- a/src/app/modules/composer/components/popup/monetize/v2/components/plus/plus.component.html
+++ b/src/app/modules/composer/components/popup/monetize/v2/components/plus/plus.component.html
@@ -1,40 +1,93 @@
-<p class="m-composerPopup__subtitle" i18n="@@COMPOSER__MONETIZE_PLUS_SUBHEADER">
-  Earn revenue for your creations
-</p>
-
-<ng-container *ngIf="isPro"
-  ><p class="m-composerPopup__text" i18n="@@COMPOSER__MONETIZE_PLUS_PRO_DESC">
-    Submit this post to the Minds Plus pool and earn potential revenue.
+<div class="m-composerPopup__content m-formWrapper">
+  <p
+    class="m-composerPopup__subtitle"
+    i18n="@@COMPOSER__MONETIZE_PLUS_SUBHEADER"
+  >
+    Earn revenue for your creations
   </p>
 
-  <div class="m-composerPopup__checkbox">
-    <m-formInput__checkbox
-      [ngModel]="termsAccepted"
-      (ngModelChange)="onTermsChange($event)"
+  <ng-container *ngIf="isPro"
+    ><p
+      class="m-form__row--label m-composerPopup__text"
+      i18n="@@COMPOSER__MONETIZE_PLUS__POOL_DESC"
     >
-      <span i18n="@@COMPOSER__PLUS__TERMS__CHECKBOX"
-        >I agree to the
-        <a routerLink="/p/terms" target="_blank">
-          T&C's
-        </a></span
-      >
-    </m-formInput__checkbox>
-  </div>
-</ng-container>
+      Submit this post to the Minds Plus pool and earn potential revenue.
+    </p>
 
-<ng-container *ngIf="!isPro"
-  ><p
-    class="m-composerPopup__text"
-    i18n="@@COMPOSER__MONETIZE_PLUS_NOT_PRO_DESC"
+    <div class="m-composerPopup__checkbox">
+      <m-formInput__checkbox
+        [ngModel]="termsAccepted"
+        [disabled]="isEditingPlus"
+        (ngModelChange)="onTermsChange($event)"
+      >
+        <span i18n="@@COMPOSER__PLUS__TERMS__CHECKBOX"
+          >I agree to the
+          <a routerLink="/p/terms" target="_blank">
+            T&C's
+          </a></span
+        >
+      </m-formInput__checkbox>
+    </div>
+    <div class="m-form__field--textboxToggle">
+      <div
+        class="m-form__row--label m-composerPopup__text"
+        i18n="@@COMPOSER__MONETIZE_PLUS__EXCLUSIVITY_PERIOD"
+      >
+        Exclusivity Period
+      </div>
+      <div class="m-form__row--input">
+        <div class="m-formInput__textboxToggle">
+          <div
+            (click)="setExpires(twoDays)"
+            [ngClass]="{ optionActive: expires === twoDays }"
+          >
+            48 hours
+          </div>
+          <div
+            (click)="setExpires(null)"
+            [ngClass]="{ optionActive: !expires }"
+          >
+            Always
+          </div>
+        </div>
+      </div>
+    </div>
+  </ng-container>
+
+  <ng-container *ngIf="!isPro"
+    ><p
+      class="m-composerPopup__text"
+      i18n="@@COMPOSER__MONETIZE_PLUS__NOT_PRO_DESC"
+    >
+      You’ll need to upgrade to Minds Pro in order to submit your post to the
+      Minds Plus content pool. You will earn revenue based on the performance of
+      the content.
+    </p>
+    <m-shadowboxSubmitButton
+      (click)="openProUpgradeModal()"
+      i18n="@@COMPOSER__MONETIZE_PLUS_UPGRADE_TO_PRO"
+    >
+      Upgrade to Minds Pro
+    </m-shadowboxSubmitButton>
+  </ng-container>
+</div>
+<div class="m-composerPopup__action">
+  <p
+    class="m-composerPopup__error"
+    *ngIf="isEditingPlus"
+    i18n="@@COMPOSER__MONETIZE_PLUS__NO_EDITING_PLUS"
   >
-    You’ll need to upgrade to Minds Pro in order to submit your post to the
-    Minds Plus content pool. You will earn revenue based on the performance of
-    the content.
+    Posts in the Plus pool cannot be removed
   </p>
+
   <m-shadowboxSubmitButton
-    (click)="openProUpgradeModal()"
-    i18n="@@COMPOSER__MONETIZE_PLUS_UPGRADE_TO_PRO"
+    *ngIf="isPro"
+    type="button"
+    (click)="save()"
+    [disabled]="!canSave"
+    i18n="@@COMMON__SAVE"
+    data-cy="plus-save-button"
   >
-    Upgrade to Minds Pro
+    Save
   </m-shadowboxSubmitButton>
-</ng-container>
+</div>
