Fixed issue where composer appeared to allow users to edit their image

--- a/src/app/modules/composer/components/preview/preview.component.html
+++ b/src/app/modules/composer/components/preview/preview.component.html
@@ -11,8 +11,8 @@
     (onPortraitOrientation)="setPortrait($event)"
   >
     <div
-      class="m-composerPreview__close"
-      [hidden]="isPosting$ | async"
+      class="m-composerPreview__removeAttachment m-composerPreview__close"
+      [hidden]="(isPosting$ | async) || (isEditing$ | async)"
       (click)="removeAttachment()"
     >
       <m-icon iconId="close"></m-icon>
