--- a/src/app/modules/composer/components/preview/preview.component.html
+++ b/src/app/modules/composer/components/preview/preview.component.html
@@ -11,7 +11,7 @@
     (onPortraitOrientation)="setPortrait($event)"
   >
     <div
-      class="m-composerPreview__removeAttachment m-composerPreview__close"
+      class="m-composerPreview__close"
       [hidden]="(isPosting$ | async) || (isEditing$ | async)"
       (click)="removeAttachment()"
     >
