--- a/src/stylesheets/fonts.scss
+++ b/src/stylesheets/fonts.scss
@@ -399,7 +399,8 @@
   font-display: swap;
   src: local('Roboto Black'), local('Roboto-Black'),
     url('<%= APP_CDN %>/assets/fonts/roboto/bold-latin-ext.woff2')
-      format('woff2');
+      format('woff2'),
+    url('<%= APP_CDN %>/assets/fonts/roboto/bold-latin-ext.woff') format('woff');
   unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB,
     U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
@@ -411,7 +412,8 @@
   font-display: swap;
   src: local('Roboto Black'), local('Roboto-Black'),
     url('<%= APP_CDN %>/assets/fonts/roboto/bold-latin-ext.woff2')
-      format('woff2');
+      format('woff2'),
+    url('<%= APP_CDN %>/assets/fonts/roboto/bold-latin-ext.woff') format('woff');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
     U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
     U+FEFF, U+FFFD;
